Finished mobile menu

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,6 +19,91 @@
         padding-bottom: 24px;
     }
     }
+    
+    &__container {
+        position: relative;
+    }
+}
+
+.mobile-header {
+    display: flex;
+    align-items: center;
+}
+
+.menu-button {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    z-index: 2;
+}
+
+.icon__cross {
+    display: none;
+
+    .menu-button.is-open & {
+        display: block;
+    }
+}
+
+.menu-button.is-open .icon__menu {
+    display: none;
+}
+
+.header__menu {
+    display: none;
+    
+    &.is-open {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100vw;
+        height: 100vh;
+        padding: 48px 20px;
+        background-color: $clr-bg-primary;
+        z-index: 1;
+
+        @include mobile {
+            padding: 48px 40px;
+        }
+    }
+}
+
+.header-socials {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+
+        &:not(:first-child) {
+        padding-left: 10px;
+        }
+
+        &:not(:last-child) {
+            padding-right: 10px;
+            border-right: 1px solid $clr-modal-input-border;
+        }
+    }
+
+    &__link {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: calc(22 / 16);
+        letter-spacing: 0.02em;
+        color: $clr-accent;
+
+        @include mobile {
+            flex-wrap: nowrap;
+            font-size: 18px;
+            line-height: calc(22 / 18);
+        }
+    }
 }
 
 .header__container,
@@ -29,6 +114,10 @@
 }
 
 .nav__list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
     // margin-left: 93px;
     // gap: 50px;
     // flex-basis: calc((100% - 100px) / 3);
@@ -39,7 +128,57 @@
     // align-items: center;
 }
 
-.nav__link,
+.nav__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: calc(47 / 40);
+    letter-spacing: 0.02em;
+    color: $clr-txt-secondary;
+    transition: color $transition;
+
+    &:hover,
+    &:focus {
+        color: $clr-accent;
+    }
+}
+
+.header-contacts {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 32px;
+    margin-top: auto;
+    margin-bottom: 64px;
+
+    &__icon {
+        display: none;
+    
+        // margin-right: 10px;
+        // fill: currentColor;
+        // transition: fill $transition;
+    
+        // .header-contacts__link:hover &,
+        // .header-contacts__link:focus & {
+        //     fill: currentColor;
+        // }
+    }
+}
+
+.header-tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: calc(40 / 34);
+    letter-spacing: 0.02em;
+    color: $clr-accent;
+}
+
+.header-email {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: calc(28 / 24);
+    letter-spacing: 0.02em;
+    color: $clr-txt-primary;
+}
+
 .header-contacts__link {
     // display: block;
     // padding: 32px 0;
@@ -61,17 +200,6 @@
     // display: flex;
     // align-items: center;
     // color: inherit;
-}
-
-.header-contacts__icon {
-    // margin-right: 10px;
-    // fill: currentColor;
-    // transition: fill $transition;
-
-    // .header-contacts__link:hover &,
-    // .header-contacts__link:focus & {
-    //     fill: currentColor;
-    // }
 }
 
 .logo--alt {
