--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -4,6 +4,10 @@ body {
     font-family: $ff-primary;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 .container {
     width: 100%;
     margin-left: auto;
