--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./base/modern-normalize";
+@import "./utilities/mixins";
 @import "./utilities/variables";
 @import "./utilities/visually-hidden";
 @import "./base/reset";
