--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -5,9 +5,9 @@
     line-height: calc(28 / 24);
     letter-spacing: 0.03em;
 
-@media screen and (min-width: 1200px) {
+    @include desktop {
         font-size: 26px;
         line-height: calc(31 / 26);
-}
+    }
 
 }
