--- a/css/main.css
+++ b/css/main.css
@@ -329,7 +329,17 @@ body {
 }
 @media screen and (min-width: 480px) {
   .container {
-    max-width: 450px;
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
   }
 }
 
@@ -350,12 +360,6 @@ body {
 .header {
   border-bottom: 1px solid #ECECEC;
 }
-@media screen and (min-width: 1200px) {
-  .header-contacts {
-    margin-left: auto;
-    gap: 50px;
-  }
-}
 .header__logo {
   display: inline-block;
   padding-top: 16px;
@@ -370,6 +374,13 @@ body {
 }
 .header__container {
   position: relative;
+}
+@media screen and (min-width: 768px) {
+  .header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .mobile-header {
@@ -391,6 +402,19 @@ body {
   border: none;
   z-index: 2;
 }
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button__icon {
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-button:hover .menu-button__icon, .menu-button:focus .menu-button__icon {
+  fill: #2196f3;
+}
 
 .icon__cross {
   display: none;
@@ -403,32 +427,47 @@ body {
   display: none;
 }
 
-.header__menu {
-  display: none;
-}
-.header__menu.is-open {
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 100vw;
-  height: 100vh;
-  padding: 48px 20px;
-  background-color: #ffffff;
-  z-index: 1;
-}
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
+  .header__menu {
+    display: none;
+  }
   .header__menu.is-open {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100vw;
+    height: 100vh;
+    height: 100dvh;
     padding: 48px 40px;
+    overflow: auto;
+    background-color: #ffffff;
+    z-index: 1;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__menu {
+    margin-left: 93px;
   }
 }
 
@@ -455,10 +494,19 @@ body {
 }
 @media screen and (min-width: 480px) {
   .header-socials__link {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
     font-size: 18px;
     line-height: 1.2222222222;
+  }
+}
+@media screen and (min-width: 480px) {
+  .header-socials {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-socials {
+    display: none;
   }
 }
 
@@ -472,15 +520,49 @@ body {
           flex-direction: column;
   gap: 32px;
 }
+@media screen and (min-width: 768px) {
+  .nav__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 50px;
+    -ms-flex-preferred-size: calc((100% - 100px) / 3);
+        flex-basis: calc((100% - 100px) / 3);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 
 .nav__link {
   font-weight: 500;
-  font-size: 40px;
-  line-height: 1.175;
+  font-size: 36px;
+  line-height: 1.25;
   letter-spacing: 0.02em;
   color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .nav__link {
+    font-size: 40px;
+    line-height: 1.175;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav__link {
+    display: inline-block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.1428571429;
+  }
 }
 .nav__link:hover, .nav__link:focus {
   color: #2196f3;
@@ -490,24 +572,71 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
-  gap: 32px;
-  margin-top: auto;
-  margin-bottom: 64px;
+}
+@media screen and (max-width: 767px) {
+  .header-contacts {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    gap: 32px;
+    margin-top: auto;
+    margin-bottom: 64px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    margin-left: 96px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    margin-left: 305px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 40px;
+  }
 }
 .header-contacts__icon {
   display: none;
 }
+@media screen and (min-width: 768px) {
+  .header-contacts__icon {
+    display: block;
+    margin-right: 8px;
+    fill: currentColor;
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header-contacts__link:hover .header-contacts__icon, .header-contacts__link:focus .header-contacts__icon {
+    fill: currentColor;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts__icon {
+    margin-right: 10px;
+  }
+}
 
 .header-tel {
   font-weight: 500;
-  font-size: 34px;
-  line-height: 1.1764705882;
+  font-size: 26px;
+  line-height: 1.5384615385;
   letter-spacing: 0.02em;
   color: #2196f3;
+}
+@media screen and (min-width: 480px) {
+  .header-tel {
+    font-size: 34px;
+    line-height: 1.1764705882;
+  }
 }
 
 .header-email {
@@ -518,6 +647,58 @@ body {
   color: #757575;
 }
 
+.header-contacts__link {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .header-contacts__link {
+    font-size: 12px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.02em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts__link {
+    display: block;
+    padding: 32px 0;
+    font-size: 14px;
+    line-height: 1.1428571429;
+  }
+}
+.header-contacts__link:hover, .header-contacts__link:focus {
+  color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: inherit;
+  }
+}
+
 .logo--alt {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__link--current {
+    position: relative;
+    color: #2196f3;
+  }
+  .nav__link--current::after {
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
 }/*# sourceMappingURL=main.css.map */
