--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,27 +1,24 @@
 .header {
     border-bottom: 1px solid $clr-header-border;
 
-    &-contacts {
-        
-    @media screen and (min-width: 1200px){
-        margin-left: auto;
-        gap: 50px;
-    }
-}
     &__logo {
         display: inline-block;
         padding-top: 16px;
         padding-bottom: 16px;
         color: $clr-header-logo;
 
-    @media screen and (min-width: 1200px) {
-        padding-top: 24px;
-        padding-bottom: 24px;
-    }
+        @include desktop {
+            padding-top: 24px;
+            padding-bottom: 24px;
+        }
     }
     
     &__container {
         position: relative;
+
+        @include tablet {
+            display: flex;
+        }
     }
 }
 
@@ -39,6 +36,19 @@
     background-color: transparent;
     border: none;
     z-index: 2;
+
+    @include tablet {
+        display: none;
+    }
+}
+
+.menu-button__icon {
+    transition: fill $transition;
+    
+    .menu-button:hover &,
+    .menu-button:focus & {
+        fill: $clr-accent;
+    }
 }
 
 .icon__cross {
@@ -54,24 +64,32 @@
 }
 
 .header__menu {
-    display: none;
-    
-    &.is-open {
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100vw;
-        height: 100vh;
-        padding: 48px 20px;
-        background-color: $clr-bg-primary;
-        z-index: 1;
+    @media screen and (max-width: 767px) {
+        display: none;
 
-        @include mobile {
+        &.is-open {
+            position: fixed;
+            top: 0;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 100vw;
+            height: 100vh;
+            height: 100dvh;
             padding: 48px 40px;
+            overflow: auto;
+            background-color: $clr-bg-primary;
+            z-index: 1;
         }
+    }
+    @include tablet {
+        display: flex;
+        align-items: center;
+        margin-left: 88px;
+    }
+    @include desktop {
+        margin-left: 93px;
     }
 }
 
@@ -99,18 +117,17 @@
         color: $clr-accent;
 
         @include mobile {
-            flex-wrap: nowrap;
             font-size: 18px;
             line-height: calc(22 / 18);
         }
     }
-}
+    @include mobile {
+        flex-wrap: nowrap;
+    }
 
-.header__container,
-.nav,
-.nav__list,
-.header-contacts {
-    // display: flex;
+    @include tablet {
+        display: none;
+    }
 }
 
 .nav__list {
@@ -118,23 +135,39 @@
     flex-direction: column;
     gap: 32px;
 
-    // margin-left: 93px;
-    // gap: 50px;
-    // flex-basis: calc((100% - 100px) / 3);
+    @include tablet {
+        flex-direction: row;
+        gap: 50px;
+        flex-basis: calc((100% - 100px) / 3);
+    }
 }
 
-.nav,
-.header-contacts {
-    // align-items: center;
+.nav {
+    @include tablet {
+        align-items: center;
+    }
 }
 
 .nav__link {
     font-weight: 500;
-    font-size: 40px;
-    line-height: calc(47 / 40);
+    font-size: 36px;
+    line-height: calc(45 / 36);
     letter-spacing: 0.02em;
     color: $clr-txt-secondary;
     transition: color $transition;
+
+    @include mobile {
+        font-size: 40px;
+        line-height: calc(47 / 40);
+    }
+
+    @include tablet {
+        display: inline-block;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        font-size: 14px;
+        line-height: calc(16 / 14);
+    }
 
     &:hover,
     &:focus {
@@ -144,31 +177,55 @@
 
 .header-contacts {
     display: flex;
-    flex-direction: column-reverse;
-    gap: 32px;
-    margin-top: auto;
-    margin-bottom: 64px;
+
+    @media screen and (max-width: 767px) {
+        flex-direction: column-reverse;
+        gap: 32px;
+        margin-top: auto;
+        margin-bottom: 64px;
+    }
+    @include tablet {
+        margin-left: 96px;
+        flex-direction: column;
+        gap: 10px;
+    }
+    @include desktop {
+        margin-left: 305px;
+        flex-direction: row;
+        gap: 40px;
+    }
 
     &__icon {
         display: none;
     
-        // margin-right: 10px;
-        // fill: currentColor;
-        // transition: fill $transition;
-    
-        // .header-contacts__link:hover &,
-        // .header-contacts__link:focus & {
-        //     fill: currentColor;
-        // }
+        @include tablet {
+            display: block;
+            margin-right: 8px;
+            fill: currentColor;
+            transition: fill $transition;
+
+            .header-contacts__link:hover &,
+            .header-contacts__link:focus & {
+                fill: currentColor;
+            }
+        }
+        @include desktop {
+            margin-right: 10px;
+        }
     }
 }
 
 .header-tel {
     font-weight: 500;
-    font-size: 34px;
-    line-height: calc(40 / 34);
+    font-size: 26px;
+    line-height: calc(40 / 26);
     letter-spacing: 0.02em;
     color: $clr-accent;
+
+    @include mobile {
+        font-size: 34px;
+        line-height: calc(40 / 34);
+    }
 }
 
 .header-email {
@@ -180,26 +237,31 @@
 }
 
 .header-contacts__link {
-    // display: block;
-    // padding: 32px 0;
-    // font-weight: 500;
-    // font-size: 14px;
-    // line-height: calc(16 / 14);
-    // letter-spacing: 0.02em;
-    // text-decoration: none;
-    // color: $clr-txt-secondary;
-    // transition: color $transition;
+    @include tablet {
+        font-size: 12px;
+        line-height: calc(14 / 12);
+        letter-spacing: 0.02em;
+    }
+    @include desktop {
+        display: block;
+        padding: 32px 0;
+        font-size: 14px;
+        line-height: calc(16 / 14);
+    }
+    transition: color $transition;
 
-    // &:hover,
-    // &:focus {
-    //     color: $clr-accent;
-    // }
+    &:hover,
+    &:focus {
+        color: $clr-accent;
+    }
 }
 
 .header-contacts__link {
-    // display: flex;
-    // align-items: center;
-    // color: inherit;
+    @include tablet {
+        display: flex;
+        align-items: center;
+        color: inherit;
+    }
 }
 
 .logo--alt {
@@ -207,17 +269,19 @@
 }
 
 .nav__link--current {
-    // position: relative;
-    // color: $clr-accent;
-
-    // &::after {
-    //     position: absolute;
-    //     left: 0;
-    //     bottom: -1px;
-    //     content: "";
-    //     width: 100%;
-    //     height: 4px;
-    //     border-radius: 2px;
-    //     background-color: $clr-accent;
-    // }
+    @include tablet {
+        position: relative;
+        color: $clr-accent;
+    
+        &::after {
+            position: absolute;
+            left: 0;
+            bottom: -1px;
+            content: "";
+            width: 100%;
+            height: 4px;
+            border-radius: 2px;
+            background-color: $clr-accent;
+        }
+    }
 }
