Finished Hero section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,8 @@
 @import "./utilities/visually-hidden";
 @import "./base/reset";
 @import "./base/common";
+@import "./base/section";
+@import "./components/button";
 @import "./layout/logo";
 @import "./layout/header";
+@import "./pages/index-page/hero"
