--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,7 +1,9 @@
 .section {
     padding: 60px 0;
-    // padding-top: 94px;
-    // padding-bottom: 94px;
+    
+    @include desktop {
+        padding: 94px 0;
+    }
 
     &__title {
         // margin-bottom: 50px;
