--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,5 @@
 @import "./components/button";
 @import "./layout/logo";
 @import "./layout/header";
-@import "./pages/index-page/hero"
+@import "./pages/index-page/hero";
+@import "./pages/index-page/advantages";
