--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,4 @@
 @import "./layout/header";
 @import "./pages/index-page/hero";
 @import "./pages/index-page/advantages";
+@import "./pages/index-page/speciality";
