Finished Team section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,10 @@
 @import "./base/common";
 @import "./base/section";
 @import "./components/button";
+@import "./components/social-link-buttons";
 @import "./layout/logo";
 @import "./layout/header";
 @import "./pages/index-page/hero";
 @import "./pages/index-page/advantages";
 @import "./pages/index-page/speciality";
+@import "./pages/index-page/team";
