--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,4 @@
 @import "./pages/index-page/advantages";
 @import "./pages/index-page/speciality";
 @import "./pages/index-page/team";
+@import "./pages/index-page/clients";
