--- a/css/main.css
+++ b/css/main.css
@@ -367,6 +367,16 @@ body {
   }
 }
 
+.subscription__input:-webkit-autofill {
+  -webkit-box-shadow: inset 0 0 0 50px #2f303a;
+  -webkit-text-fill-color: #ffffff;
+}
+
+.modal__input:-webkit-autofill {
+  -webkit-box-shadow: inset 0 0 0 50px #ffffff;
+  -webkit-text-fill-color: #000000;
+}
+
 .button {
   font-weight: 700;
   font-size: 16px;
@@ -382,8 +392,15 @@ body {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover, .button:focus {
-  background-color: #188ce8;
+@media screen and (max-width: 1199px) {
+  .button:active {
+    background-color: #188ce8;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .button:hover, .button:focus {
+    background-color: #188ce8;
+  }
 }
 
 .socials-item {
@@ -475,7 +492,7 @@ body {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-button:focus .menu-button__icon {
+.menu-button:active .menu-button__icon {
   fill: #2196f3;
 }
 
@@ -612,6 +629,9 @@ body {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.nav__link:active {
+  color: #2196f3;
+}
 @media screen and (min-width: 480px) {
   .nav__link {
     font-size: 40px;
@@ -627,8 +647,10 @@ body {
     line-height: 1.1428571429;
   }
 }
-.nav__link:hover, .nav__link:focus {
-  color: #2196f3;
+@media screen and (min-width: 1200px) {
+  .nav__link:hover, .nav__link:focus {
+    color: #2196f3;
+  }
 }
 
 .header-contacts {
@@ -678,13 +700,16 @@ body {
     -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .header-contacts__link:hover .header-contacts__icon, .header-contacts__link:focus .header-contacts__icon {
+  .header-contacts__link:active .header-contacts__icon {
     fill: currentColor;
   }
 }
 @media screen and (min-width: 1200px) {
   .header-contacts__icon {
     margin-right: 10px;
+  }
+  .header-contacts__link:hover .header-contacts__icon, .header-contacts__link:focus .header-contacts__icon {
+    fill: currentColor;
   }
 }
 
@@ -720,6 +745,9 @@ body {
     line-height: 1.1666666667;
     letter-spacing: 0.02em;
   }
+  .header-contacts__link:active {
+    color: #2196f3;
+  }
 }
 @media screen and (min-width: 1200px) {
   .header-contacts__link {
@@ -728,9 +756,9 @@ body {
     font-size: 14px;
     line-height: 1.1428571429;
   }
-}
-.header-contacts__link:hover, .header-contacts__link:focus {
-  color: #2196f3;
+  .header-contacts__link:hover, .header-contacts__link:focus {
+    color: #2196f3;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1012,12 +1040,12 @@ body {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-socials__link:focus {
+.team-socials__link:active {
   background-color: #2196f3;
   color: #ffffff;
 }
 @media screen and (min-width: 1200px) {
-  .team-socials__link:hover {
+  .team-socials__link:hover, .team-socials__link:focus {
     background-color: #2196f3;
     color: #ffffff;
   }
@@ -1027,11 +1055,11 @@ body {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-socials__link:focus .team-socials__icon {
+.team-socials__link:active .team-socials__icon {
   fill: currentColor;
 }
 @media screen and (min-width: 1200px) {
-  .team-socials__link:hover .team-socials__icon {
+  .team-socials__link:hover .team-socials__icon, .team-socials__link:focus .team-socials__icon {
     fill: currentColor;
   }
 }
@@ -1083,12 +1111,12 @@ body {
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.clients__link:focus {
+.clients__link:active {
   color: #2196f3;
   border-color: #2196f3;
 }
 @media screen and (min-width: 1200px) {
-  .clients__link:hover {
+  .clients__link:hover, .clients__link:focus {
     color: #2196f3;
     border-color: #2196f3;
   }
@@ -1099,11 +1127,217 @@ body {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.clients__link:focus .clients__icon {
+.clients__link:active .clients__icon {
   fill: currentColor;
 }
 @media screen and (min-width: 1200px) {
-  .clients__link:hover .clients__icon {
+  .clients__link:hover .clients__icon, .clients__link:focus .clients__icon {
     fill: currentColor;
   }
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    gap: 70px;
+  }
+}
+.footer__logo {
+  display: block;
+  margin-bottom: 28px;
+  color: #ffffff;
+}
+@media screen and (max-width: 1199px) {
+  .footer__logo {
+    text-align: center;
+  }
+}
+
+.footer-contacts {
+  margin-bottom: 60px;
+}
+@media screen and (max-width: 1199px) {
+  .footer-contacts {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-contacts {
+    width: 232px;
+  }
+}
+.footer-contacts__link {
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-contacts__link:active {
+  color: #2196f3;
+}
+@media screen and (min-width: 1200px) {
+  .footer-contacts__link:hover, .footer-contacts__link:focus {
+    color: #2196f3;
+  }
+}
+.footer-contacts__item:not(:last-child) {
+  margin-bottom: 12px;
+}
+.footer-contacts__link--color {
+  color: #ffffff;
+}
+
+.footer-social {
+  margin-bottom: 60px;
+}
+.footer-social__title {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+@media screen and (max-width: 1199px) {
+  .footer-social__title {
+    text-align: center;
+  }
+}
+.footer-social__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.footer-social__link {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social__link:active {
+  background-color: #2196f3;
+}
+@media screen and (min-width: 1200px) {
+  .footer-social__link:hover, .footer-social__link:focus {
+    background-color: #2196f3;
+  }
+}
+.footer-social__icon {
+  fill: currentColor;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription {
+    margin-left: auto;
+  }
+}
+.subscription__title {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+@media screen and (max-width: 1199px) {
+  .subscription__title {
+    text-align: center;
+  }
+}
+.subscription__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+}
+@media screen and (max-width: 1199px) {
+  .subscription__form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 20px;
+  }
+}
+.subscription__input {
+  width: 100%;
+  height: 50px;
+  padding: 15px 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  -webkit-transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .subscription__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscription__input {
+    width: 358px;
+  }
+}
+.subscription__input:focus {
+  border-color: #2196f3;
+  outline: 1px solid #2196f3;
+}
+.subscription__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  width: 200px;
+  height: 50px;
+  padding: 10px 28px;
+}
+.subscription__icon {
+  fill: currentColor;
 }/*# sourceMappingURL=main.css.map */
