--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./base/reset";
 @import "./base/common";
 @import "./base/section";
+@import "./base/form-autocomplete";
 @import "./components/button";
 @import "./components/social-link-buttons";
 @import "./layout/logo";
@@ -14,3 +15,4 @@
 @import "./pages/index-page/speciality";
 @import "./pages/index-page/team";
 @import "./pages/index-page/clients";
+@import "./layout/footer";
