Finished Modal window

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./base/form-autocomplete";
 @import "./components/button";
 @import "./components/social-link-buttons";
+@import "./components/modal";
 @import "./layout/logo";
 @import "./layout/header";
 @import "./pages/index-page/hero";
